--- a/_config.yml
+++ b/_config.yml
@@ -98,9 +98,9 @@ menu:
   archives: /archives
   tags: /tags
 
-backup:
-  type: git
-  repository:
-    github: https://github.com/jingb/jingb.github.io.git,hexo
-    gitcafe: https://github.com/jingb/jingb.github.io.git,hexo
+  # backup:
+  #   type: git
+  #   repository:
+  #     github: https://github.com/jingb/jingb.github.io.git,hexo
+  #     gitcafe: https://github.com/jingb/jingb.github.io.git,hexo
 
